--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bookspire | Discover Your Next Favorite Book</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bookspire - Discover Your Next Read</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -13,77 +13,64 @@
       font-family: 'Inter', sans-serif;
     }
     body {
-      background-color: #f9f9fb;
-      color: #1f2937;
+      background-color: #f7f9fc;
+      color: #333;
+      line-height: 1.6;
     }
     header {
-      background-color: #3b82f6;
+      background-color: #2e3a59;
       color: white;
-      padding: 2rem 1rem;
+      padding: 1.5rem;
       text-align: center;
     }
     header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
+      font-size: 2rem;
     }
     nav {
-      background-color: #2563eb;
+      background-color: #1f2937;
+      padding: 0.8rem;
       display: flex;
       justify-content: center;
-      gap: 2rem;
-      padding: 1rem 0;
     }
     nav a {
-      color: white;
+      color: #fff;
+      margin: 0 1rem;
       text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s;
+      font-weight: 500;
     }
     nav a:hover {
-      color: #dbeafe;
+      text-decoration: underline;
     }
     .hero {
-      background: #eff6ff;
-      padding: 4rem 1rem;
+      padding: 4rem 2rem;
       text-align: center;
+      background-color: #e2e8f0;
     }
     .hero h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
     }
     .hero p {
-      font-size: 1.1rem;
-      color: #4b5563;
+      font-size: 1.2rem;
+      color: #555;
     }
     .features {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      padding: 3rem 1rem;
-      background: white;
+      justify-content: space-around;
+      padding: 3rem 2rem;
+      background-color: #ffffff;
     }
     .feature {
-      background: #f3f4f6;
-      border-radius: 8px;
-      padding: 2rem;
-      width: 300px;
+      max-width: 250px;
       text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
     }
     .feature h3 {
-      color: #2563eb;
       margin-bottom: 0.5rem;
-    }
-    .feature p {
-      color: #374151;
+      color: #2e3a59;
     }
     footer {
-      background-color: #1e3a8a;
-      color: white;
+      background-color: #2e3a59;
+      color: #fff;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
@@ -91,10 +78,9 @@
   </style>
 </head>
 <body>
-
   <header>
     <h1>Bookspire</h1>
-    <p>Ignite your reading journey</p>
+    <p>Ignite Your Reading Journey</p>
   </header>
 
   <nav>
@@ -106,27 +92,27 @@
   </nav>
 
   <section class="hero">
-    <h2>Discover, Explore & Love Books</h2>
-    <p>Get personalized recommendations, track your reading, and connect with fellow book lovers.</p>
+    <h2>Discover, Explore, and Fall in Love with Books</h2>
+    <p>Your personalized gateway to the best reads across all genres.</p>
   </section>
 
   <section class="features">
     <div class="feature">
-      <h3>Personalized Picks</h3>
-      <p>Receive tailored book suggestions based on your interests.</p>
+      <h3>Tailored Recommendations</h3>
+      <p>Get book suggestions based on your taste and mood.</p>
     </div>
     <div class="feature">
-      <h3>Reading Tracker</h3>
-      <p>Keep track of your finished, current, and future reads.</p>
+      <h3>Track Your Progress</h3>
+      <p>Organize your reading list and track your journey.</p>
     </div>
     <div class="feature">
       <h3>Community Reviews</h3>
-      <p>See what others are reading and share your own reviews.</p>
+      <p>See what others are saying and share your own thoughts.</p>
     </div>
   </section>
 
   <footer>
-    &copy; 2025 Bookspire. All rights reserved.
+    <p>&copy; 2025 Bookspire. All rights reserved.</p>
   </footer>
 
   <!-- Watson Assistant Chat Embed -->
@@ -137,7 +123,7 @@
       serviceInstanceID: "1c647a75-9336-4083-ac04-42f96de7777a",
       onLoad: async (instance) => { await instance.render(); }
     };
-    setTimeout(function(){
+    setTimeout(function() {
       const t = document.createElement('script');
       t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
               (window.watsonAssistantChatOptions.clientVersion || 'latest') +
@@ -145,6 +131,6 @@
       document.head.appendChild(t);
     });
   </script>
-
 </body>
 </html>
+
