--- a/index.html
+++ b/index.html
@@ -2,135 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bookspire - Discover Your Next Read</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bookspire - Discover Great Books</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Nunito', sans-serif;
     }
+
     body {
-      background-color: #f7f9fc;
-      color: #333;
+      background: #f9fafb;
+      color: #1f2937;
       line-height: 1.6;
     }
+
     header {
-      background-color: #2e3a59;
+      background-color: #1e40af;
       color: white;
-      padding: 1.5rem;
+      padding: 1.5rem 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2rem;
-    }
+
     nav {
-      background-color: #1f2937;
-      padding: 0.8rem;
+      background-color: #1e3a8a;
       display: flex;
       justify-content: center;
+      gap: 2rem;
+      padding: 1rem;
     }
+
     nav a {
       color: #fff;
-      margin: 0 1rem;
       text-decoration: none;
-      font-weight: 500;
+      font-weight: 600;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
+
     .hero {
       padding: 4rem 2rem;
       text-align: center;
-      background-color: #e2e8f0;
+      background-color: #e0e7ff;
     }
-    .hero h2 {
-      font-size: 2rem;
+
+    .hero h1 {
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
+
     .hero p {
       font-size: 1.2rem;
-      color: #555;
+      color: #4b5563;
     }
+
+    .section {
+      padding: 3rem 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .section h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      color: #1e3a8a;
+    }
+
     .features {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-around;
-      padding: 3rem 2rem;
-      background-color: #ffffff;
+      gap: 2rem;
     }
+
     .feature {
-      max-width: 250px;
+      flex: 1 1 280px;
+      background: white;
+      border-radius: 8px;
+      padding: 1.5rem;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
       text-align: center;
     }
+
     .feature h3 {
       margin-bottom: 0.5rem;
-      color: #2e3a59;
+      color: #1e40af;
     }
+
     footer {
-      background-color: #2e3a59;
-      color: #fff;
+      background-color: #1e3a8a;
+      color: white;
       text-align: center;
       padding: 1rem;
-      font-size: 0.9rem;
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      .features {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Bookspire</h1>
-    <p>Ignite Your Reading Journey</p>
+    <p>Your Personal Book Discovery Platform</p>
   </header>
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">Recommendations</a>
     <a href="#">Genres</a>
-    <a href="#">My List</a>
+    <a href="#">Top Picks</a>
+    <a href="#">My Books</a>
     <a href="#">Contact</a>
   </nav>
 
   <section class="hero">
-    <h2>Discover, Explore, and Fall in Love with Books</h2>
-    <p>Your personalized gateway to the best reads across all genres.</p>
+    <h1>Discover Stories That Inspire</h1>
+    <p>Explore curated book recommendations and never run out of great reads again.</p>
   </section>
 
-  <section class="features">
-    <div class="feature">
-      <h3>Tailored Recommendations</h3>
-      <p>Get book suggestions based on your taste and mood.</p>
-    </div>
-    <div class="feature">
-      <h3>Track Your Progress</h3>
-      <p>Organize your reading list and track your journey.</p>
-    </div>
-    <div class="feature">
-      <h3>Community Reviews</h3>
-      <p>See what others are saying and share your own thoughts.</p>
-    </div>
-  </section>
+  <section class="section">
+    <h2>Why Bookspire?</h2>
+    <div class="features">
+      <div class="feature">
+        <h3>Smart Suggestions</h3>
+        <p>Get AI-powered book recommendations based on your interests.</p>
+      </div>
+      <div class="feature">
+        <h3>Track Reading</h3>
+        <p>Manage your reading list and track your progress easily.</p>
 
-  <footer>
-    <p>&copy; 2025 Bookspire. All rights reserved.</p>
-  </footer>
-
-  <!-- Watson Assistant Chat Embed -->
-  <script>
-    window.watsonAssistantChatOptions = {
-      integrationID: "8f366cde-13df-4c66-b5f0-bc81c01d5d1f",
-      region: "eu-de",
-      serviceInstanceID: "1c647a75-9336-4083-ac04-42f96de7777a",
-      onLoad: async (instance) => { await instance.render(); }
-    };
-    setTimeout(function() {
-      const t = document.createElement('script');
-      t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
-              (window.watsonAssistantChatOptions.clientVersion || 'latest') +
-              "/WatsonAssistantChatEntry.js";
-      document.head.appendChild(t);
-    });
-  </script>
-</body>
-</html>
 
