--- a/index.html
+++ b/index.html
@@ -3,90 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bookspire | Discover Your Next Favorite Book</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <title>Bookspire - Discover Great Books</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Nunito', sans-serif;
     }
+
     body {
-      background-color: #f9f9fb;
+      background: #f9fafb;
       color: #1f2937;
+      line-height: 1.6;
     }
+
     header {
-      background-color: #3b82f6;
+      background-color: #1e40af;
       color: white;
-      padding: 2rem 1rem;
+      padding: 1.5rem 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-    }
+
     nav {
-      background-color: #2563eb;
+      background-color: #1e3a8a;
       display: flex;
       justify-content: center;
       gap: 2rem;
-      padding: 1rem 0;
+      padding: 1rem;
     }
+
     nav a {
-      color: white;
+      color: #fff;
       text-decoration: none;
       font-weight: 600;
-      transition: color 0.3s;
     }
+
     nav a:hover {
-      color: #dbeafe;
+      text-decoration: underline;
     }
+
     .hero {
-      background: #eff6ff;
-      padding: 4rem 1rem;
+      padding: 4rem 2rem;
       text-align: center;
+      background-color: #e0e7ff;
     }
-    .hero h2 {
-      font-size: 2rem;
+
+    .hero h1 {
+      font-size: 2.5rem;
       margin-bottom: 1rem;
     }
+
     .hero p {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       color: #4b5563;
     }
+
+    .section {
+      padding: 3rem 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .section h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      color: #1e3a8a;
+    }
+
     .features {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-around;
       gap: 2rem;
-      padding: 3rem 1rem;
-      background: white;
     }
+
     .feature {
-      background: #f3f4f6;
+      flex: 1 1 280px;
+      background: white;
       border-radius: 8px;
-      padding: 2rem;
-      width: 300px;
-      text-align: center;
+      padding: 1.5rem;
       box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      text-align: center;
     }
+
     .feature h3 {
-      color: #2563eb;
       margin-bottom: 0.5rem;
+      color: #1e40af;
     }
-    .feature p {
-      color: #374151;
-    }
+
     footer {
       background-color: #1e3a8a;
       color: white;
       text-align: center;
       padding: 1rem;
-      font-size: 0.9rem;
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 768px) {
+      .features {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
@@ -94,34 +113,37 @@
 
   <header>
     <h1>Bookspire</h1>
-    <p>Ignite your reading journey</p>
+    <p>Your Personal Book Discovery Platform</p>
   </header>
 
   <nav>
     <a href="#">Home</a>
-    <a href="#">Recommendations</a>
     <a href="#">Genres</a>
-    <a href="#">My List</a>
+    <a href="#">Top Picks</a>
+    <a href="#">My Books</a>
     <a href="#">Contact</a>
   </nav>
 
   <section class="hero">
-    <h2>Discover, Explore & Love Books</h2>
-    <p>Get personalized recommendations, track your reading, and connect with fellow book lovers.</p>
+    <h1>Discover Stories That Inspire</h1>
+    <p>Explore curated book recommendations and never run out of great reads again.</p>
   </section>
 
-  <section class="features">
-    <div class="feature">
-      <h3>Personalized Picks</h3>
-      <p>Receive tailored book suggestions based on your interests.</p>
-    </div>
-    <div class="feature">
-      <h3>Reading Tracker</h3>
-      <p>Keep track of your finished, current, and future reads.</p>
-    </div>
-    <div class="feature">
-      <h3>Community Reviews</h3>
-      <p>See what others are reading and share your own reviews.</p>
+  <section class="section">
+    <h2>Why Bookspire?</h2>
+    <div class="features">
+      <div class="feature">
+        <h3>Smart Suggestions</h3>
+        <p>Get AI-powered book recommendations based on your interests.</p>
+      </div>
+      <div class="feature">
+        <h3>Track Reading</h3>
+        <p>Manage your reading list and track your progress easily.</p>
+      </div>
+      <div class="feature">
+        <h3>Connect with Readers</h3>
+        <p>Read reviews and share your thoughts with the community.</p>
+      </div>
     </div>
   </section>
 
@@ -132,20 +154,19 @@
   <!-- Watson Assistant Chat Embed -->
   <script>
     window.watsonAssistantChatOptions = {
-      integrationID: "8f366cde-13df-4c66-b5f0-bc81c01d5d1f",
+      integrationID: "0f8e18ee-0934-47e1-a6c7-022c95e3b15e",
       region: "eu-de",
       serviceInstanceID: "1c647a75-9336-4083-ac04-42f96de7777a",
       onLoad: async (instance) => { await instance.render(); }
     };
     setTimeout(function(){
-      const t = document.createElement('script');
-      t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
-              (window.watsonAssistantChatOptions.clientVersion || 'latest') +
-              "/WatsonAssistantChatEntry.js";
+      const t=document.createElement('script');
+      t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
+        (window.watsonAssistantChatOptions.clientVersion || 'latest') +
+        "/WatsonAssistantChatEntry.js";
       document.head.appendChild(t);
     });
   </script>
 
 </body>
 </html>
-
